--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,26 +1,36 @@
 <header class="p-3 text-bg-dark">
     <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"><a href="/"
-                                                                                                            class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                <use xlink:href="#bootstrap"></use>
-            </svg>
-        </a>
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-            </ul>
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search"><input type="search"
-                                                                                       class="form-control form-control-dark text-bg-dark"
-                                                                                       placeholder="Search..."
-                                                                                       aria-label="Search"></form>
-            <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-fluid">
+                <a href="/" class="d-flex align-items-center text-white text-decoration-none me-3">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if current_user.is_anonymous %}
+                        <li class="nav-item">
+                            <a href="#" class="nav-link px-2 text-secondary">xd</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item"><a href="{{ url_for('views.index') }}" class="nav-link px-2 text-secondary">Home</a></li>
+                        <li class="nav-item"><a href="{{ url_for('views.index') }}" class="nav-link px-2 text-white">Features</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+                    {% endif %}
+                </ul>
+
+                <div class="d-flex">
+                    {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-light me-2">Logout</a>
+                    {% else %}
+                        <a href="{{ url_for('auth.login') }}" class="btn btn-outline-light me-2">Login</a>
+                        <a href="{{ url_for('auth.register') }}" class="btn btn-warning">Sign-up</a>
+                    {% endif %}
+                </div>
             </div>
-        </div>
+        </nav>
     </div>
 </header>
