--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -11,11 +11,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if current_user.is_anonymous %}
                         <li class="nav-item">
-                            <a href="#" class="nav-link px-2 text-secondary">xd</a>
+                            <a href="#" class="nav-link px-2 text-secondary">About</a>
                         </li>
                     {% else %}
-                        <li class="nav-item"><a href="{{ url_for('views.index') }}" class="nav-link px-2 text-secondary">Home</a></li>
-                        <li class="nav-item"><a href="{{ url_for('views.index') }}" class="nav-link px-2 text-white">Features</a></li>
+                        <li class="nav-item"><a href="{{ url_for('views.tasks') }}" class="nav-link px-2 text-secondary">Tasks</a></li>
+                        <li class="nav-item"><a href="{{ url_for('views.select_date') }}" class="nav-link px-2 text-white">Add tasks</a></li>
                         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
                         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
