--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,30 +1,53 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
     <div class="container col-lg-8 col-xl-6 px-3 py-3">
         <div class="row align-items-center g-4 py-3">
             <div class="col-md-10 mx-auto col-lg-6">
-                <form class="p-3 border rounded-3 bg-light" method="POST" action="" novalidate >
+
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+
+                <form class="p-3 border rounded-3 bg-light" method="POST" action="" novalidate>
                     {{ form.hidden_tag() }}
 
                     <div class="form-floating mb-2">
                         {{ form.username(class="form-control", id="floatingName") }}
                         {{ form.username.label(for="floatingName") }}
+                        {% for error in form.username.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
                     </div>
 
                     <div class="form-floating mb-2">
                         {{ form.mail(class="form-control", id="floatingEmail") }}
                         {{ form.mail.label(for="floatingEmail") }}
+                        {% for error in form.mail.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
                     </div>
 
                     <div class="form-floating mb-2">
                         {{ form.password(class="form-control", id="floatingPassword") }}
                         {{ form.password.label(for="floatingPassword") }}
+                        {% for error in form.password.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
                     </div>
 
-                     <div class="form-floating mb-2">
-                        {{ form.password2(class="form-control", id="floatingPassword") }}
-                        {{ form.password2.label(for="floatingPassword") }}
+                    <div class="form-floating mb-2">
+                        {{ form.password2(class="form-control", id="floatingPassword2") }}
+                        {{ form.password2.label(for="floatingPassword2") }}
+                        {% for error in form.password2.errors %}
+                            <div class="invalid-feedback d-block">{{ error }}</div>
+                        {% endfor %}
                     </div>
 
                     {{ form.submit(class="w-100 btn btn-sm btn-primary", type="submit") }}
