--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -4,7 +4,7 @@
 <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Hi {{ current_user.username }}! These are your tasks</h2>
-        <a href="{{ url_for('views.create_task', date=date_today|string) }}" class="btn btn-success">
+        <a href="{{ url_for('views.select_date', date=date_today|string) }}" class="btn btn-success">
             + Add New Task
         </a>
     </div>
