--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="card-footer bg-white border-top text-end">
-                            <a href="#" class="btn btn-sm btn-outline-primary">View Details</a>
+                            <a href='{{ url_for('views.task', id=task.id) }}' class="btn btn-sm btn-outline-primary">View Details</a>
                         </div>
                     </div>
                 </div>
