--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    {% if title %}
-      <title>{{ title }} - TodoWeb</title>
-      {% else %}
-      <title>Welcome to TodoWeb</title>
-      {% endif %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-          crossorigin="anonymous">
+  <meta charset="UTF-8">
+  {% if title %}
+    <title>{{ title }} - TodoWeb</title>
+  {% else %}
+    <title>Welcome to TodoWeb</title>
+  {% endif %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+        crossorigin="anonymous">
+
+  {% block extra_head %}{% endblock %}
 </head>
 <body>
 {% include 'components/navbar.html' %}
