--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -42,7 +42,12 @@
 
                     {{ form.submit(class="w-100 btn btn-sm btn-primary", type="submit") }}
 
-                  <p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
+                    <p class="mt-3">
+                        Forgot Your Password?
+                        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset It</a>
+                    </p>
+
+                    <p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
                 </form>
             </div>
         </div>
