--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="mb-0">Task Details</h2>
         <div class="btn-group">
-            <a href="#" class="btn btn-warning">
+            <a href="{{ url_for('views.edit_task', id = task.id) }}" class="btn btn-warning">
                 ✏️ Edit Task
             </a>
             <form action="{{ url_for('views.delete_task', id=task.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this task?');">
